--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   feather_icons: ^1.2.0
   shared_preferences: ^2.3.2
+  url_launcher: ^6.3.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
